# android10

./: .classpath  README.md  android.ipr  hello.go
frameworks/av/: CleanSpec.mk
frameworks/av/apex/: Android.bp  AndroidManifest-media.xml  AndroidManifest-swcodec.xml  OWNERS  com.android.media.pem  com.android.media.swcodec.pem  com.android.media.swcodec.pk8  com.android.media.swcodec.x509.pem  ld.config.txt  manifest.json  manifest_codec.json
frameworks/av/camera/: Android.bp  Android.mk  Camera.cpp  CameraBase.cpp  CameraMetadata.cpp  CameraParameters.cpp  CameraParameters2.cpp  CameraUtils.cpp  CaptureResult.cpp  ICamera.cpp  ICameraClient.cpp  ICameraRecordingProxy.cpp  ICameraRecordingProxyListener.cpp  OWNERS  VendorTagDescriptor.cpp
frameworks/av/cmds/: OWNERS
frameworks/av/drm/: OWNERS
frameworks/av/include/: OWNERS  camera  cpustats
frameworks/compile/mclinker/lib/Script/: Android.bp  AssertCmd.cpp  Assignment.cpp  BinaryOp.cpp  CMakeLists.txt  EntryCmd.cpp  FileToken.cpp  GroupCmd.cpp  InputCmd.cpp  InputSectDesc.cpp  InputToken.cpp  NameSpec.cpp  NullaryOp.cpp  Operand.cpp  Operator.cpp  OutputArchCmd.cpp  OutputCmd.cpp  OutputFormatCmd.cpp  OutputSectDesc.cpp  RpnEvaluator.cpp  RpnExpr.cpp  ScriptCommand.cpp  ScriptFile.cpp  ScriptParser.yy  ScriptReader.cpp  ScriptScanner.ll  SearchDirCmd.cpp  SectionsCmd.cpp  StrToken.cpp  StringList.cpp  TernaryOp.cpp  UnaryOp.cpp  WildcardPattern.cpp
frameworks/ex/: CleanSpec.mk
frameworks/layoutlib/: .gitignore  Android.mk
frameworks/minikin/: .clang-format  Android.bp  PREUPLOAD.cfg
frameworks/ml/: .clang-format  CleanSpec.mk  OWNERS
frameworks/multidex/: .gitignore  OWNERS  build.gradle  settings.gradle  version.gradle
frameworks/native/: Android.bp  CleanSpec.mk  PREUPLOAD.cfg
frameworks/opt/gamesdk/samples/bouncyball/app/: CMakeLists.txt  build.gradle
frameworks/opt/gamesdk/samples/bouncyball/app/src/main/: AndroidManifest.xml
frameworks/opt/gamesdk/samples/bouncyball/app/src/main/cpp/: Circle.cpp  Circle.h  Orbit.cpp  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  Thread.cpp
frameworks/opt/gamesdk/samples/bouncyball/app/src/main/java/com/prefabulated/bouncyball/: OrbitActivity.java  SettingsActivity.java  SettingsFragment.java
frameworks/opt/gamesdk/samples/bouncyball/app/src/main/res/layout/: activity_orbit.xml
frameworks/opt/gamesdk/samples/bouncyball/app/src/main/res/menu/: menu_orbit.xml
frameworks/opt/gamesdk/samples/bouncyball/app/src/main/res/values/: strings.xml  styles.xml
frameworks/opt/gamesdk/samples/bouncyball/app/src/main/res/xml/: preferences.xml
frameworks/opt/gamesdk/samples/tuningfork/tftestapp/app/: CMakeLists.txt  build.gradle  version.script
frameworks/opt/gamesdk/samples/tuningfork/tftestapp/app/src/main/: AndroidManifest.xml
frameworks/opt/gamesdk/samples/tuningfork/tftestapp/app/src/main/assets/tuningfork/: Makefile  dev_tuningfork.proto  dev_tuningfork_fidelityparams_1.txt  dev_tuningfork_fidelityparams_2.txt  dev_tuningfork_fidelityparams_3.txt  dev_tuningfork_fidelityparams_4.txt  dev_tuningfork_fidelityparams_5.txt  dev_tuningfork_fidelityparams_6.txt  tuningfork_settings.txt
frameworks/opt/gamesdk/samples/tuningfork/tftestapp/app/src/main/cpp/: Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  tftestapp.cpp
frameworks/opt/gamesdk/samples/tuningfork/tftestapp/app/src/main/java/com/google/tuningfork/: TFTestActivity.java
frameworks/opt/gamesdk/samples/tuningfork/tftestapp/app/src/main/proto/: dev_tuningfork.proto  tuningfork.proto  tuningfork_clearcut_log.proto
frameworks/opt/gamesdk/samples/tuningfork/tftestapp/app/src/main/res/values/: strings.xml
frameworks/opt/gamesdk/samples/unitypackaging/app/: CMakeLists.txt  build.gradle  version.script
frameworks/opt/gamesdk/samples/unitypackaging/app/src/main/: AndroidManifest.xml
frameworks/opt/gamesdk/samples/unitypackaging/app/src/main/cpp/: swappy
frameworks/opt/gamesdk/samples/unitypackaging/app/src/main/res/values/: strings.xml
frameworks/opt/gamesdk/src/device_info/: CMakeLists.txt  device_info.cpp
frameworks/opt/gamesdk/src/swappy/: CMakeLists.txt  ChoreographerFilter.cpp  ChoreographerFilter.h  ChoreographerThread.cpp  ChoreographerThread.h  CpuInfo.cpp  CpuInfo.h  EGL.cpp  EGL.h  FrameStatistics.cpp  FrameStatistics.h  OWNERS  Settings.cpp  Settings.h  Swappy.cpp  Swappy.h  Swappy_c.cpp  SystemProperties.cpp  SystemProperties.h  Thread.cpp  Thread.h
frameworks/opt/gamesdk/src/swappyVk/: CMakeLists.txt  SwappyVk.cpp
frameworks/opt/gamesdk/src/tuningfork/: CMakeLists.txt  annotation_util.cpp  annotation_util.h  clearcut_backend.cpp  clearcut_backend.h  clearcutserializer.cpp  clearcutserializer.h  histogram.cpp  histogram.h  prong.cpp  prong.h  protobuf_util.cpp  tuningfork.cpp  tuningfork_c.cpp  tuningfork_extra.cpp  tuningfork_internal.h  tuningfork_utils.cpp  tuningfork_utils.h  uploadthread.cpp  uploadthread.h  version.script
frameworks/opt/gamesdk/src/tuningfork/proto/: example_tuningfork.proto  tuningfork.proto  tuningfork_clearcut_log.proto
frameworks/opt/gamesdk/src/tuningfork/tools/validation/: README.md  build.gradle
frameworks/opt/gamesdk/src/tuningfork/tools/validation/src/main/java/com/google/tuningfork/validation/: ApkConfig.java  DeveloperTuningforkParser.java  ErrorCollector.java  ErrorType.java  ExternalProtoCompiler.java  FolderConfig.java  ParserErrorCollector.java  TuningforkApkValidationTool.java  ValidationUtil.java
frameworks/rs/: Android.bp  Android.mk  CleanSpec.mk  OWNERS  build_rs.py  libRS.map  rs.h  rs.spec  rsAllocation.cpp  rsAllocation.h  rsAnimation.cpp  rsAnimation.h  rsApiAllocation.cpp  rsApiContext.cpp  rsApiDevice.cpp  rsApiElement.cpp  rsApiFileA3D.cpp  rsApiMesh.cpp  rsApiStubs.cpp  rsApiStubs.h  rsApiType.cpp  rsCacheDir.cpp  rsClosure.cpp  rsClosure.h  rsCompatibilityLib.h  rsComponent.cpp  rsComponent.h  rsContext.cpp  rsContext.h  rsCppUtils.cpp  rsCppUtils.h  rsDebugHelper.h  rsDevice.cpp  rsDevice.h  rsDriverLoader.cpp  rsElement.cpp  rsElement.h  rsEnv.h  rsFBOCache.cpp  rsFBOCache.h  (+73 more)
frameworks/wilhelm/: Android.bp  OWNERS
(+6321 files in other folders)
